--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_admob: ^0.11.2
   admob_flutter: ^3.0.0
+  google_mobile_ads: ^1.3.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
