--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,14 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+    <key>GADApplicationIdentifier</key>
+       <string>ca-app-pub-3261790910242051~9766480041</string>
+       <key>SKAdNetworkItems</key>
+          <array>
+            <dict>
+              <key>SKAdNetworkIdentifier</key>
+              <string>cstr6suwn9.skadnetwork</string>
+            </dict>
+          </array>
 </dict>
 </plist>
